--- a/pomodoro.css
+++ b/pomodoro.css
@@ -1,7 +1,28 @@
-@media only screen and (max-width: 768px) {
-  .container {
-    width: 375px;
-  }
+@import url("https://fonts.googleapis.com/css2?family=Baumans&family=Turret+Road:wght@700&display=swap");
+
+body {
+  background: rgb(69, 101, 123);
+  background: -moz-radial-gradient(
+    circle,
+    rgba(69, 101, 123, 1) 50%,
+    rgba(16, 42, 58, 1) 100%
+  );
+  background: -webkit-radial-gradient(
+    circle,
+    rgba(69, 101, 123, 1) 50%,
+    rgba(16, 42, 58, 1) 100%
+  );
+  background: radial-gradient(
+    circle,
+    rgba(69, 101, 123, 1) 50%,
+    rgba(16, 42, 58, 1) 100%
+  );
+
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  font-family: "Baumans", sans-serif;
 }
 
 .controls {
@@ -14,33 +35,21 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  justify-items: space-around;
 }
 
 .timer-container {
-  border: 1px solid #e15b46;
-  border-radius: 50%;
   height: 55%;
   width: 80%;
   margin: 0 auto;
   align-items: center;
   display: flex;
-  align-items: center;
   justify-content: center;
-  align-content: space-between;
-  box-shadow: 2px 3px 18px 8px #c04630;
+  border-radius: 50%;
+  box-shadow: 5px 1px 10px #45657b, 2px -2px 14px #123043;
 }
 
-body {
-  background: linear-gradient(#b2bc99, #7da07c);
-  color: #491a69;
-  height: 100%;
-  margin: 0;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
-h1,h2{
+h1,
+h2 {
   text-align: center;
 }
 
@@ -48,9 +57,8 @@ button {
   border: none;
   padding: 10px;
   font-size: 14px;
-  border-radius: 12%;
-  background-color: #491a69;
-  color:#e15b46;
+  border-radius: 10%;
+  background-color: #102a3a;
 }
 
 button:active {
@@ -64,17 +72,21 @@ button:active {
 
 .container {
   width: 500px;
-  border: 3px solid #e15b46;
   margin: 50px auto;
-  border-radius: 5%;
   height: 640px;
-  background-color:#e15b46;
-  display:flex;
-  flex-direction:column;
-  justify-content:space-around;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border-radius: 50px;
+  box-shadow: 1px 11px 62px #102a3a, -21px 0px 22px #45657b;
 }
 
-#time-left{
-  font-size: 50px;
+@media only screen and (max-width: 768px) {
+  .container {
+    max-width: 100%;
+  }
 }
 
+#time-left {
+  font-size: 2em;
+}
